objects/ObjectConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <label>Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <formula>ObjectName__c + &quot;,&quot; + FieldName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique</label>
        <type>Text</type>
    </fields>
    <label>Object Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FieldLabel__c</columns>
        <columns>FieldName__c</columns>
        <columns>FieldType__c</columns>
        <columns>Grouping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Object Config Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>